game creation extended: - Game now persists GameMode from Enum - GameMode required for game creation - API entsprechend erweitert - Creation extended by location URI
